crates/dsl/tests/ui/update_invalid_type_without_path.stderr
error: Type 'missing_type' not found in schema. Available types: ["block", "block_number", "hash32", "header", "header_body", "major_protocol_version", "protocol_version", "row_certificate_pointer", "row_drep", "row_drep_id", "row_dynamic", "row_index", "row_lovelace", "row_pool", "row_pool_id", "row_static", "slot"]
 --> tests/ui/update_invalid_type_without_path.rs:7:13
  |
7 |       let _ = update!(store, b"missing_type", b"row-001", |value: &mut Vec<u8>| {
  |  _____________^
8 | |         let _ = value;
9 | |     });
  | |______^
  |
  = note: this error originates in the macro `update` (in Nightly builds, run with -Z macro-backtrace for more info)
